--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body {
   padding: 0;
   text-align: center;
   font-family: 'Open Sans', sans-serif;
-  color: #3A6355;
+  color: #85be7c;
   background: #2d2b30;
 }
 
@@ -16,11 +16,11 @@ body {
 
 a {
   text-decoration: none;
-  color: #999;
+  color: #eaeaea;
 }
 
 a:hover {
-  color: #999;
+  color: #eaeaea;
 }
 
 /* Section Styles */
@@ -64,7 +64,7 @@ a:hover {
 
 header {
   text-align: center;
-  background: url('../img/concert02_with_text.jpg') no-repeat top center ;
+  background: url('../img/concert02_no_text.jpg') no-repeat top center ;
   background-size: cover;
   overflow: hidden;
   padding-top: 60px;
@@ -120,7 +120,7 @@ header .name{
 .heading{
   font-size: 2em;
   text-transform: uppercase;
-  color: #781125;
+  color: #f36b6f;
   margin-top: 10px;
 }
 
