--- a/css/tour.css
+++ b/css/tour.css
@@ -1,16 +1,45 @@
 /* Tour page styles */
 
-pre {
-  font-family: 'Open Sans', sans-serif;
+table .heading::before,
+table .heading::after {
+  content: "";	
+  width: 20px;
+  height: 20px;
+  background-image: url('../img/guitar_pick.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  display: inline-block;
+  margin-left: 6px;
+  margin-right: 6px;
 }
 
-.heading{
-  display: inline-block;
-  margin: 0;
-}
 
 .pick{
   width: 40px;
-  height: 0%;
+  height: 20px;
   padding: 10px;
+}
+
+table,
+th,
+td {
+	border: 2px solid rgba(255,255,255, 0.7);
+	border-collapse: collapse;
+}
+
+table {
+	border-spacing: 5px;
+	width: 66%;
+	margin-left: auto;
+	margin-right: auto;
+
+}
+
+thead {
+	color: white;
+}
+
+th,
+td {
+	padding: 5px;
 }
