Went through validation and accessibility checklists
Added changes and error fixes as I moved through the checklists and
validation of all the files.

--- a/css/survey.css
+++ b/css/survey.css
@@ -15,7 +15,8 @@ fieldset {
   border-width: 3px;
 }
 
-label[for="favSong"]{
+label[for="favSong"],
+label[for="albums"]{
   display: inline-block;
   margin: 16px 0 16px;
 }
