--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,8 @@ a:hover {
   padding: 5px;
   border-radius: 10px;
   transition: all .5s;
-  color: white;
+  color: black;
+  text-decoration: underline;
 }
 
 
@@ -191,20 +192,7 @@ a.social {
   transition: all .5s;
 }
 
-a.twitter {
-  background-image: url(../img/twitter-32.png);
-  text-indent:-9999px;
-}
 
-a.youtube {
-  background-image: url(../img/youtube-32.png);
-  text-indent:-9999px;
-}
-
-a.spotify {
-  background-image: url(../img/spotify-32.png);
-  text-indent:-9999px;
-}
 
 a.social:hover {
   opacity: 1;
